Implementacion de Estilo en Los Layouts
Diseño de la Interfaz

--- a/Lab1_ED/app/src/main/res/layout/fragment_fragment_musica.xml
+++ b/Lab1_ED/app/src/main/res/layout/fragment_fragment_musica.xml
@@ -43,7 +43,8 @@ tools:context=".MainActivity">
         android:id="@+id/ListaParaMostrar"
         android:layout_width="match_parent"
         android:layout_height="573dp"
-        android:background="#1eaaaaaa" />
+        android:background="#1eaaaaaa"
+        />
 
 </LinearLayout>
 
